--- a/src/app/avaliation/risco/qpaf/qpaf.component.html
+++ b/src/app/avaliation/risco/qpaf/qpaf.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h1 i18n>Questionário de Prontidão para a Actividade Fisica (PAR-Q)</h1>
+        <h1 i18n>Questionário PAR-Q</h1>
     </div>
 
     <div class="section">
@@ -8,7 +8,7 @@
             <mat-card>
                 <mat-card-content>
                     <p i18n>1) Seu médico já lhe disse que você é portador de um problema cardíaco e que somente deve
-                        fazer actividade física recomendada por um profissional da saude?
+                        fazer atividade física recomendada por um profissional da saude?
                     </p>
                     <div class="flex-radio-group">
                         <mat-radio-group aria-label="Select an option" #parq1="ngModel" name="parq1"
@@ -22,7 +22,7 @@
             </mat-card>
             <mat-card>
                 <mat-card-content>
-                    <p i18n>2) Você sente dor no peito quando realiza uma actividade física?</p>
+                    <p i18n>2) Você sente dor no peito quando realiza uma atividade física?</p>
                     <div class="flex-radio-group">
                         <mat-radio-group aria-label="Select an option" #parq2="ngModel" name="parq2"
                             [(ngModel)]="student.parq2">
@@ -34,7 +34,7 @@
             </mat-card>
             <mat-card>
                 <mat-card-content>
-                    <p i18n>3) No último mês, você teve dor no peito quando não estava realizando uma actividade física?
+                    <p i18n>3) No último mês, você teve dor no peito quando não estava realizando uma atividade física?
                     </p>
                     <div class="flex-radio-group">
                         <mat-radio-group aria-label="Select an option" #parq3="ngModel" name="parq3"
@@ -63,7 +63,7 @@
             <mat-card>
                 <mat-card-content>
                     <p i18n>5) Você sofre de algum problema ósseo ou articular que poderia ser agravado por uma mudança
-                        em sua actividade física?</p>
+                        em sua atividade física?</p>
                     <div class="flex-radio-group">
                         <mat-radio-group aria-label="Select an option" #parq5="ngModel" name="parq5"
                             [(ngModel)]="student.parq5">
@@ -76,7 +76,7 @@
             </mat-card>
             <mat-card>
                 <mat-card-content>
-                    <p i18n>6) Seu médico está lhe receitando actualmente medicamentos (por exemplo, diurécticos) para a
+                    <p i18n>6) Seu médico está lhe receitando atualmente medicamentos (por exemplo, diuréticos) para a
                         Pressão arterial ou algum problema cardíaco?</p>
                     <div class="flex-radio-group">
                         <mat-radio-group aria-label="Select an option" #parq6="ngModel" name="parq6"
@@ -90,7 +90,7 @@
             </mat-card>
             <mat-card>
                 <mat-card-content>
-                    <p i18n>7) Você está a par de alguma outra razão pela qual não deveria realizar uma actividade
+                    <p i18n>7) Você está a par de alguma outra razão pela qual não deveria realizar uma atividade
                         física?</p>
                     <div class="flex-radio-group">
                         <mat-radio-group aria-label="Select an option" #parq7="ngModel" name="parq7"
