--- a/src/app/avaliation/av-dash/av-dash.component.html
+++ b/src/app/avaliation/av-dash/av-dash.component.html
@@ -30,18 +30,18 @@
 
                 <mat-card>
                     <mat-card-header routerLink="/qpaf/">
-                        <mat-card-subtitle>Questionário de prontidão para a actividade fisica (PAR-Q)
+                        <mat-card-subtitle>Questionário de Prontidão para a Atividade Fisica (PAR-Q)
                         </mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/rdc/">
-                        <mat-card-subtitle>Risco de desenvolvimento de cardiopatia</mat-card-subtitle>
+                        <mat-card-subtitle>Risco de Desenvolvimento de Cardiopatia</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/rddc/">
-                        <mat-card-subtitle>Risco de desnvolvimento de dor na coluna</mat-card-subtitle>
+                        <mat-card-subtitle>Risco de Desenvolvimento de Dor na Coluna</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
             </mat-expansion-panel>
