--- a/src/app/dashboard/dash/dash.component.scss
+++ b/src/app/dashboard/dash/dash.component.scss
@@ -6,13 +6,19 @@
     height: 95vh;
   }
 
+  .title{
+    font-family: 'Fredoka One', cursive;
+    font-size: 20px;
+    font-weight: 500;
+  }
+
   .inactive{
     color: orangered;
   }
 
   .dash-form{
     width: 84%;
-    height: 230px;
+    height: 180px;
     position: absolute;
     bottom: 50px;
     left: 50%;
@@ -34,13 +40,13 @@
   @media only screen and (min-width: 768px) {
     .dash-form{
       width: 50%;
-      top: 50%;
+      /* top: 50%; */
     }
   }
   @media only screen and (min-width: 1024px) {
     .dash-form{
       width: 30%;
-      top: 50%;
+     /*  top: 50%; */
     }
   }
   .dash-buttons-action{
